# line-ending-cli

./: pyproject.toml
src/line_ending_cli/: __init__.py
